@@ -184,7 +184,7 @@ reference to the <a class="reference internal" href="#doctitle">doctitle</a> and
 <p>The default role for interpreted text is <cite>Title Reference</cite>.  Here are
 some explicit interpreted text roles: a PEP reference (<a class="reference external" href="http://www.python.org/dev/peps/pep-0287">PEP 287</a>); an
 RFC reference (<a class="reference external" href="http://www.faqs.org/rfcs/rfc2822.html">RFC 2822</a>); an abbreviation (<abbr>abb.</abbr>), an acronym
-(<acronym>reST</acronym>), code (<tt class="code docutils literal">print &quot;hello world&quot;</tt>); a <sub>subscript</sub>;
+(<acronym>reST</acronym>), code (<code>print &quot;hello world&quot;</code>); a <sub>subscript</sub>;
 a <sup>superscript</sup> and explicit roles for <cite>Docutils</cite>'
 <em>standard</em> <strong>inline</strong> <tt class="docutils literal">markup</tt>.</p>
 <!-- DO NOT RE-WRAP THE FOLLOWING PARAGRAPH! -->
@@ -863,7 +863,7 @@ known) or as base for special code roles, e.g.,</p>
 <!--  -->
 <blockquote>
 Docutils uses LaTeX syntax for math directives and roles:
-<tt class="code latex tex docutils literal">\alpha = f(x)</tt> prints <span class="math">
+<code class="latex tex">\alpha = f(x)</code> prints <span class="math">
 \(\alpha = f(x)\)</span>
 .</blockquote>
 <p>The <tt class="docutils literal">:code:</tt> option of the <cite>include</cite> directive sets the included content
